--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   google_fonts: ^6.2.1
   provider: ^6.1.2
   smooth_page_indicator: ^1.2.0+3
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
