--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,20 @@
 name: mertcanerbasi
-description: "A new Flutter project."
+description: "Mertcan Erbaşı's personal website"
 publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.5.0
+  sdk: ^3.4.0
 
 dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.3.0
-  fl_chart: ^0.68.0
   flutter:
     sdk: flutter
   flutter_lints: ^4.0.0
   flutter_svg: ^2.0.10
   google_fonts: ^6.2.1
   provider: ^6.1.2
-  smooth_page_indicator: ^1.2.0+3
   url_launcher: ^6.3.0
 
 dev_dependencies:
